# duckforeach

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: stocks.db
examples/: CMakeLists.txt
examples/bench/: CMakeLists.txt  README.md  main.cpp
examples/breakout/: CMakeLists.txt  main.cpp
examples/stocks/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/include/: duckforeach.hpp
src/tests/: main.cpp
tests/: CMakeLists.txt  float_types.cpp  floats.cpp  functions.cpp  int_types.cpp  ints.cpp  main.cpp  strings.cpp  time_types.cpp  times.cpp
